# particle_system_benchmark

./: CMakeLists.txt  README.md
source/: main.cpp
source/particle_system/: particle_system_data.cpp  particle_system_data.h  particle_system_descriptor.cpp  particle_system_descriptor.h  particle_system_primitive.h  particle_system_stream.h  particle_system_stream_mask.h
source/particle_system/auxiliary/: cpu_profiler.cpp  cpu_profiler.h  enum.h  math.h  random.h
source/particle_system/emitters/: over_time_particle_system_emitter.cpp  over_time_particle_system_emitter.h  particle_system_emitter.h
source/particle_system/generators/: box_position_particle_system_generator.cpp  box_position_particle_system_generator.h  lifetime_particle_system_generator.cpp  lifetime_particle_system_generator.h  particle_system_generator.h
source/particle_system/updaters/: color_over_lifetime_particle_system_updater.cpp  color_over_lifetime_particle_system_updater.h  lifetime_particle_system_updater.cpp  lifetime_particle_system_updater.h  particle_system_updater.h  position_particle_system_updater.cpp  position_particle_system_updater.h  velocity_over_lifetime_particle_system_updater.cpp  velocity_over_lifetime_particle_system_updater.h
